# G-shell

./: .gitignore  .gshellrc  Cargo.toml  README.md  gshell.sh  history  install.sh  rustfmt.toml
Docs/: PATH.md  REPL.md
aur/: .SRCINFO  PKGBUILD
src/: main.rs
src/commands/: cd.rs  echo.rs  env.rs  execute.rs  help.rs  history.rs  mod.rs  pwd.rs  test.rs  type.rs
src/parser/: ast.rs  eval.rs  expand.rs  glob.rs  helper.rs  mod.rs  parser.rs  pathcache.rs  pipeline.rs  process.rs  redirect_stdout.rs  shell.rs  tab.rs  theme.rs  tokenize.rs
