[package]
name = "CrazyShell"
version = "0.2.3"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"
rust-version = "1.91"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
pathsearch = "0.2.0"
thiserror = "1.0.38"                             # error handling
