[package]
name = "g-shell"
version = "1.1.3"
authors = ["Crazygiscool <crazygiscool@proton.me>"]
edition = "2024"
rust-version = "1.91"
description = "A POSIX-compliant shell written in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Crazygiscool/G-shell"
keywords = ["shell", "posix", "repl", "command-line"]
categories = ["command-line-utilities"]
exclude = [".codecrafters/", "codecrafters.yml", "your_program.sh", "Docs/", "history"]

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
libc = "0.2.179"
pathsearch = "0.2.0"
thiserror = "1.0.38"                             # error handling
rustyline = { version = "17", features = ["with-file-history"] }
os_pipe = "1.2.3"
